##
## doc/Makefile.am
##
## Copyright (C) 2000-2010 by
## Jeffrey Fulmer - <jeff@joedog.org>, et al.
## This file is distributed as part of Siege
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License along
## with this program; if not, write to the Free Software Foundation, Inc.
## 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
##

AUTOMAKE_OPTIONS  =    foreign no-dependencies 

man_MANS          =    ajping.1

man_SOURCE        =    ajping.pod

man_SHELLS        =    ajping.1.in 

EXTRA_DIST        =    $(man_SOURCE) $(man_SHELLS) 

DISTCLEANFILES    =    $(man_MANS) $(man_SHELLS)

